--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,17 +1,15 @@
-plugins {
-    id 'com.android.library'
-    id 'maven-publish'
-}
+apply plugin: 'com.android.library'
+apply plugin: 'maven-publish'
 group = 'com.github.ithomasoft'
 
 android {
 
     namespace 'com.ithomasoft.architecture'
-    compileSdk 33
+    compileSdk 32
 
     defaultConfig {
         minSdk 19
-        targetSdk 33
+        targetSdk 32
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -42,7 +40,7 @@ afterEvaluate {
                 from components.getByName('release')
                 groupId = 'com.github.ithomasoft'
                 artifactId = 'architecture'
-                version = '1.0.1'
+                version = '1.0.2'
             }
         }
     }
